--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
 *{
 	margin: 0;
 	padding: 0;
+    -webkit-touch-callout: none; 
+    -webkit-user-select: none;
+    -khtml-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none; 
+    user-select: none; 
 }
 /*Limpar Padrão*/
 
@@ -28,6 +34,12 @@
     text-indent: 20px;
 }
 
+.texto2 {
+    font-size: 18px;
+    margin-left: 20px;
+}
+
 .lista {
-    margin-left: 80px;
+    margin-left: 40px;
+    font-size: 18px;
 }
